--- a/index.html
+++ b/index.html
@@ -28,18 +28,6 @@
     </select>
     <div id='radio-buttons'>
         <label>
-            Left<input type='radio' name='animation' class='animation'>
-        </label>
-        <label>
-            Right <input type='radio' name='animation' class='animation'>
-        </label>
-        <label>
-            Up<input type='radio' name='animation' class='animation'>
-        </label>
-        <label>
-            Down<input type='radio' name='animation' class='animation'>
-        </label>
-        <label>
             None<input type='radio' name='animation' class='animation'>
         </label>
     </div>
@@ -56,6 +44,10 @@
         <a target='_blank' href='https://github.com/jackisbackpdx'><p>Jackson Kelley</p></a>
     </div>
 </footer>
+<div class='quarter-circle'></div>
+<div class='quarter-circle'></div>
+<div class='quarter-circle'></div>
+<div class='quarter-circle'></div>
     <script type='module' src='app.js'></script>
 </body>
 </html>
