--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixel Animations</title>
-    <link rel='stylesheet' href='style.css'>
+    <link rel='stylesheet' href='./style.css'>
 </head>
 <body>
     <header>
@@ -48,6 +48,6 @@
 <div class='quarter-circle'></div>
 <div class='quarter-circle'></div>
 <div class='quarter-circle'></div>
-    <script type='module' src='app.js'></script>
+    <script type='module' src='./app.js'></script>
 </body>
 </html>
