clarifications for instructions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Pixel Art Creator</h1>
-        <h2>Select a color, then click on a square to fill with the chosen color</h2>
+        <h2>Select a color, then click on or drag over a square to fill with the chosen color</h2>
     </header>    
 <main></main>
 <form autocomplete='off'>
@@ -44,6 +44,7 @@
         <a target='_blank' href='https://github.com/jackisbackpdx'><p>Jackson Kelley</p></a>
     </div>
 </footer>
+<p class='animate-text'>Animate (right only currently)</p>
 <div class='quarter-circle'></div>
 <div class='quarter-circle'></div>
 <div class='quarter-circle'></div>
