removed the margin of the pixels, and have pause button and animate right button functionality. As well as changed the pause button from an input element to an image.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixel Animations</title>
     <link rel='stylesheet' href='./style.css'>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -24,13 +25,9 @@
         <option value='1'>20 x 20</option>
         <option value='2'>30 x 30</option>
         <option value='3'>40 x 40</option>
-        <option value='4' selected>50 x 50</option>
+        <option value='4' selected>60 x 60</option>
     </select>
-    <div id='radio-buttons'>
-        <label>
-            None<input type='radio' name='animation' class='animation'>
-        </label>
-    </div>
+   
 </form>
 <button>clear</button>
 <colors>
@@ -44,7 +41,7 @@
         <a target='_blank' href='https://github.com/jackisbackpdx'><p>Jackson Kelley</p></a>
     </div>
 </footer>
-<p class='animate-text'>Animate (right only currently)</p>
+<img id='pause' src='./orange-pause.jpg'>
 <div class='quarter-circle'></div>
 <div class='quarter-circle'></div>
 <div class='quarter-circle'></div>
